# BLG312-Operating-Systems-HW

./: .gitignore  README.md
fork/: q1.c  q2.c  q3.c
hw1/: .gitignore  CMakeLists.txt  Makefile  README.md  q1.c  q2.c
hw2/: .gitignore  CMakeLists.txt  README.md  customer.h  multi_process.c  multi_thread.c
